--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="@string/slide_2_title"
             android:layout_marginTop="200dp"
-            android:textColor="@color/bg_screen7"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/slide_title"
             android:textAlignment="center"
             android:textStyle="bold" />
