--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,22 +22,22 @@
 
     <!-- dots active colors -->
     <color name="dot_light_screen1">#f98da5</color>
-    <color name="dot_light_screen2">#8cf9eb</color>
-    <color name="dot_light_screen3">#93c6fd</color>
-    <color name="dot_light_screen4">#e4b5fc</color>
+    <color name="dot_light_screen2">#3da2dc</color>
+    <color name="dot_light_screen3">#f20d42</color>
+    <color name="dot_light_screen4">#00cc00</color>
 
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
-        <item>@color/dot_light_screen2</item>
+        <item>@color/colorPrimary</item>
         <item>@color/dot_light_screen3</item>
         <item>@color/dot_light_screen4</item>
     </array>
 
     <array name="array_dot_inactive">
-        <item>@color/dot_dark_screen1</item>
-        <item>@color/dot_dark_screen2</item>
-        <item>@color/dot_dark_screen3</item>
-        <item>@color/dot_dark_screen4</item>
+        <item>@color/dot_light_screen1</item>
+        <item>@color/colorPrimary</item>
+        <item>@color/dot_light_screen3</item>
+        <item>@color/dot_light_screen4</item>
     </array>
 
 </resources>
